--- a/src/app/components/core/category-details/category-details.component.html
+++ b/src/app/components/core/category-details/category-details.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center">
-  <button data-hs-overlay="#hs-ai-offcanvas">
+  <button [attr.data-hs-overlay]="'#hs-ai-offcanvas-'+category?.id">
     <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg"
          width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
          stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -8,13 +8,15 @@
   </button>
 </div>
 
-<div id="hs-ai-offcanvas" class="hs-overlay hs-overlay-open:translate-x-0 hidden
+<div id="hs-ai-offcanvas-{{category?.id}}" class="hs-overlay hs-overlay-open:translate-x-0 hidden
 translate-x-full fixed top-0 end-0 transition-all duration-300 transform h-full
 max-w-2xl w-full z-[80] bg-white border-e" role="dialog" tabindex="-1" aria-labelledby="hs-ai-offcanvas-label">
   <div class="relative overflow-hidden min-h-32 text-center bg-[url('https://preline.co/assets/svg/examples/abstract-bg-1.svg')] bg-no-repeat bg-center">
     <!-- Close Button -->
     <div class="absolute top-2 end-2">
-      <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none" aria-label="Close" data-hs-overlay="#hs-ai-offcanvas">
+      <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100
+      text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none"
+              aria-label="Close" [attr.data-hs-overlay]="'#hs-ai-offcanvas-'+category?.id">
         <span class="sr-only">Close</span>
         <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
       </button>
