--- a/src/app/components/core/category-details/category-details.component.html
+++ b/src/app/components/core/category-details/category-details.component.html
@@ -25,8 +25,31 @@ max-w-2xl w-full z-[80] bg-white border-e" role="dialog" tabindex="-1" aria-labe
 
     <!-- SVG Background Element -->
     <figure class="absolute inset-x-0 bottom-0 -mb-px">
-      <svg xmlns='http://www.w3.org/2000/svg' preserveAspectRatio="none" width='100%' height='100%' viewBox='0 0 2 1'><rect fill='#6E9A43' width='2' height='1'/><defs><linearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'><stop offset='0'  stop-color='#6E9A43'/><stop offset='1'  stop-color='#71B6C3'/></linearGradient><linearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'><stop offset='0'  stop-color='#5E8539' stop-opacity='0'/><stop offset='1'  stop-color='#5E8539' stop-opacity='1'/></linearGradient><linearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'><stop  offset='0' stop-color='#5E8539' stop-opacity='0'/><stop  offset='1' stop-color='#5E8539' stop-opacity='1'/></linearGradient></defs><rect x='0' y='0' fill='url(#a)' width='2' height='1'/><g fill-opacity='0.5'><polygon fill='url(#b)' points='0 1 0 0 2 0'/><polygon fill='url(#c)' points='2 1 2 0 0 0'/></g></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" width="100%" height="100%" viewBox="0 0 2 1">
+        <rect fill="#6E9A43" width="2" height="1"/>
+        <defs>
+          <linearGradient [attr.id]="'a-' + category?.id" gradientUnits="userSpaceOnUse" x1="0" x2="0" y1="0" y2="1">
+            <stop offset="0" stop-color="#6E9A43"/>
+            <stop offset="1" stop-color="#71B6C3"/>
+          </linearGradient>
+          <linearGradient [attr.id]="'b-' + category?.id" gradientUnits="userSpaceOnUse" x1="0" y1="0" x2="0" y2="1">
+            <stop offset="0" stop-color="#5E8539" stop-opacity="0"/>
+            <stop offset="1" stop-color="#5E8539" stop-opacity="1"/>
+          </linearGradient>
+          <linearGradient [attr.id]="'c-' + category?.id" gradientUnits="userSpaceOnUse" x1="0" y1="0" x2="2" y2="2">
+            <stop offset="0" stop-color="#5E8539" stop-opacity="0"/>
+            <stop offset="1" stop-color="#5E8539" stop-opacity="1"/>
+          </linearGradient>
+        </defs>
+        <rect x="0" y="0" [attr.fill]="'url(#a-' + category?.id + ')'" width="2" height="1"/>
+        <g fill-opacity="0.5">
+          <polygon [attr.fill]="'url(#b-' + category?.id + ')'" points="0 1 0 0 2 0"/>
+          <polygon [attr.fill]="'url(#c-' + category?.id + ')'" points="2 1 2 0 0 0"/>
+        </g>
+      </svg>
     </figure>
+
+
     <!-- End SVG Background Element -->
   </div>
 
@@ -50,7 +73,8 @@ max-w-2xl w-full z-[80] bg-white border-e" role="dialog" tabindex="-1" aria-labe
     </div>
 
     <!-- Grid -->
-    <div class="mt-5 sm:mt-10 grid grid-cols-2 sm:grid-cols-3 gap-5">
+    <h4 class="text-xs font-semibold uppercase text-gray-800 mt-5 sm:mt-10 mb-2">Period details</h4>
+    <div class="grid grid-cols-2 sm:grid-cols-3 gap-5">
       <div>
         <span class="block text-xs uppercase text-gray-500">Target amount:</span>
         <span class="block text-sm font-medium text-gray-800">{{category?.targetAmount | customCurrencyPipe}} {{category?.generalCategory!.currency}}</span>
@@ -72,7 +96,20 @@ max-w-2xl w-full z-[80] bg-white border-e" role="dialog" tabindex="-1" aria-labe
     <!-- End Grid -->
 
     @if(category?.generalCategory?.categoryType == CategoryType.Custom){
-      Mostrando categoria general
+      <h4 class="text-xs font-semibold uppercase text-gray-800 mt-5 sm:mt-10 mb-2">Extra details</h4>
+      <div class="grid grid-cols-2 sm:grid-cols-3 gap-5">
+        <div>
+          <span class="block text-xs uppercase text-gray-500">Total target amount:</span>
+          <span class="block text-sm font-medium text-gray-800">{{category?.generalCategory!.targetAmount | customCurrencyPipe}} {{category?.generalCategory!.currency}}</span>
+        </div>
+        <!-- End Col -->
+
+        <div>
+          <span class="block text-xs uppercase text-gray-500">Estimated finish date:</span>
+          <span class="block text-sm font-medium text-gray-800">{{getLocateDateString(category?.generalCategory!.finalDate)}}</span>
+        </div>
+        <!-- End Col -->
+      </div>
     }
 
     <div class="mt-5 sm:mt-10">
