--- a/src/app/components/core/category-details/category-details.component.html
+++ b/src/app/components/core/category-details/category-details.component.html
@@ -1,5 +1,5 @@
 <div class="flex items-center">
-  <button [attr.data-hs-overlay]="'#hs-ai-offcanvas-'+category?.id">
+  <button [attr.data-hs-overlay]="'#hs-ai-offcanvas-'+category?.id" (click)="openOffCanvas()">
     <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg"
          width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
          stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -138,7 +138,7 @@ max-w-2xl w-full z-[80] bg-white border-e" role="dialog" tabindex="-1" aria-labe
         Modify
       </a>
       <a class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border
-      border-transparent bg-error text-white focus:outline-none disabled:opacity-50 disabled:pointer-events-none">
+      border-transparent bg-error text-white focus:outline-none disabled:opacity-50 disabled:pointer-events-none cursor-pointer" (click)="deleteCategory()">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
              class="shrink-0 size-4"><path d="M3 6h18"/><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"/><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"/>
